# crm

./: .gitignore  AGENTS.md  README.md
.github/ISSUE_TEMPLATE/: ticket.yml
.github/workflows/: api.yml
apps/api/: pyproject.toml
apps/api/src/crm_api/: main.py  settings.py
apps/api/tests/: test_health.py
apps/mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
apps/mobile/src/api/: auth.ts  client.ts  contacts.ts
apps/mobile/src/navigation/: RootNavigator.tsx  types.ts
apps/mobile/src/screens/: BiometricConsentScreen.tsx  CameraPermissionScreen.tsx  CardScannerConfirmScreen.tsx  CardScannerReviewScreen.tsx  CardScannerScreen.tsx  ContactDetailScreen.tsx  ContactsScreen.tsx  DashboardScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx
apps/mobile/src/types/: auth.ts  contact.ts
apps/mobile/src/utils/: biometrics.ts  fonts.ts  ocr.ts  permissions.ts
docs/: 03-data-model.md  04-architecture.md  05-api.md  IOS-SETUP.md  MACHINE-BOOTSTRAP.md
prompts/: agent-bootstrap-ios-macmini.md  agent-bootstrap.md
scripts/: bootstrap-machine.sh
