[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-api"
version = "0.1.0"
description = "CRM backend API (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1.0",
    "platform-core",
    "platform-tenancy",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "mypy>=1.8", "ruff>=0.14"]

# Dev layout: ~/projects/library and ~/projects/crm are SIBLING checkouts.
# CI checks both out side-by-side (see .github/workflows/api.yml).
[tool.uv.sources]
platform-core = { path = "../../../library/packages/platform", editable = true }
platform-tenancy = { path = "../../../library/packages/platform-tenancy", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/crm_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
packages = ["crm_api"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "asyncpg", "asyncpg.*",
    "platform_core", "platform_core.*",
    "platform_tenancy", "platform_tenancy.*",
]
ignore_missing_imports = true
